# os-tripleo-module

./: .gitignore  .testr.conf  README.md  demo.yaml  setup.cfg  setup.py  test-requirements.txt  tox.ini
os-tripleo-module/: common.py  os_tripleo_provision.py  os_tripleo_provision_test.py  overcloud.py  provision.py  undercloud.py  utils.py
os-tripleo-module/tests/units/: fakes.py  test_provision.py
os_tripleo_module/: os_tripleo_provision.py
os_tripleo_module/tests/units/: fakes.py  test_provision.py
tripleo-poc/: ansible.cfg  demo.yaml  hosts
tripleo-poc/playbooks/: rdo.yaml
tripleo-poc/roles/overcloud/tasks/: main.yaml
tripleo-poc/roles/provision/tasks/: main.yaml
tripleo-poc/roles/undercloud/tasks/: main.yaml
