[metadata]
name = os_tripleo_module
summary = Ansible module for rdo tripleo automation
description-file =
    README.md
author = Mathieu Bultel
author-email = mat.bultel@gmail.com
home-page = https://github.com/matbu

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
